Apply fixes to address overflow on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,10 @@ footer img {
 	width: 2rem;
 }
 
+pre {
+	white-space: pre-wrap;
+}
+
 select {
 	background: url(assets/br_down.webp) no-repeat right var(--melon);
 	background-position-x: 6.5rem;
